--- a/CNN_PINN.ipynb
+++ b/CNN_PINN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "de805878",
       "metadata": {
         "id": "de805878"
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 26,
       "id": "4612e727",
       "metadata": {
         "id": "4612e727"
@@ -66,20 +66,20 @@
         "\n",
         "    for file_path in file_paths:\n",
         "        try:\n",
-        "            with open(file_path, 'r') as f:\n",
+        "          with open(file_path, 'r', encoding='latin-1') as f:\n",
         "                lines = f.readlines()\n",
         "\n",
-        "            emg_channels = []\n",
-        "            angles = []\n",
+        "          emg_channels = []\n",
+        "          angles = []\n",
         "\n",
-        "            for line in lines:\n",
-        "                if line.strip() and not line.startswith('#'):\\\n",
+        "          for line in lines:\n",
+        "              if line.strip() and not line.startswith('#'):\n",
         "                  values = [float(val) for val in line.strip().split(',')]\n",
-        "                if len(values) >= 12:\n",
+        "                  if len(values) >= 12:\n",
         "                        emg_channels.append(values[:9])  # First 9 values are EMG\n",
         "                        angles.append(values[9:12])  # Next 3 values are joint angles\n",
         "\n",
-        "            if emg_channels and angles:\n",
+        "          if emg_channels and angles:\n",
         "                # Convert to numpy arrays and transpose to get (channels, samples)\n",
         "                emg_data = np.array(emg_channels).T\n",
         "                joint_angles = np.array(angles).T\n",
@@ -87,7 +87,7 @@
         "                emg_data_list.append(emg_data)\n",
         "                joint_angles_list.append(joint_angles)\n",
         "                print(f\"Successfully loaded data from {file_path}\")\n",
-        "            else:\n",
+        "          else:\n",
         "                print(f\"No valid data found in {file_path}\")\n",
         "\n",
         "        except Exception as e:\n",
@@ -121,7 +121,7 @@
         "id": "3FDDM9Pz17SE"
       },
       "id": "3FDDM9Pz17SE",
-      "execution_count": 51,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "8cacd56f",
       "metadata": {
         "id": "8cacd56f"
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 5,
       "id": "c8f9925c",
       "metadata": {
         "id": "c8f9925c"
@@ -299,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 6,
       "id": "7dfa01c7",
       "metadata": {
         "id": "7dfa01c7"
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "767202ee",
       "metadata": {
         "id": "767202ee"
@@ -449,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "8214a331",
       "metadata": {
         "id": "8214a331"
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "68b0a1b1",
       "metadata": {
         "id": "68b0a1b1"
@@ -593,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "8d658f58",
       "metadata": {
         "id": "8d658f58"
@@ -685,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 20,
       "id": "cff62d58",
       "metadata": {
         "colab": {
@@ -693,22 +693,23 @@
           "height": 106
         },
         "id": "cff62d58",
-        "outputId": "73accc25-1a8b-4ffb-f81c-a572491e3c21"
+        "outputId": "48a83da8-151a-41e8-83ca-b6b4f4a335bd"
       },
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-47-c3ff3c05864c>, line 15)",
+          "evalue": "invalid syntax (<ipython-input-20-cfcbeb0a30f1>, line 16)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-47-c3ff3c05864c>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    , ordered_channels\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-cfcbeb0a30f1>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    , ordered_channels\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
       "source": [
         "def main(emg_data_file, ordered_channels=None):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "    log_files = find_log_files()\n",
+        "    list_of_files = ['/content/data1.log', '/content/data2.log', '/content/data3.log', '/content/data4.log', \"/content/data5.log\", '/content/data6.log']\n",
+        "    data = load_txt_files(list_of_files)\n",
         "    if not log_files:\n",
         "        print(\"No log files found. Generating synthetic data instead.\")\n",
         "        # Generate synthetic data as a fallback\n",
@@ -766,10 +767,10 @@
         "    print(f\"Using device: {device}\")\n",
         "\n",
         "    # Generate synthetic data instead of loading real data\n",
-        "    #data_file = generate_synthetic_data()\n",
+        "    list_of_files = ['/content/data1.log', '/content/data2.log', '/content/data3.log', '/content/data4.log', \"/content/data5.log\", '/content/data6.log']\n",
         "\n",
         "    # Load the data\n",
-        "    emg_data, joint_angles = load_txt_files_from_dir()\n",
+        "    emg_data, joint_angles = load_txt_files(list_of_files)\n",
         "\n",
         "    # Apply preprocessing to EMG data\n",
         "    filtered_emg = bandpass_filter(emg_data, [20, 450], 125)\n",
@@ -858,33 +859,64 @@
       ],
       "metadata": {
         "id": "nVpw8k1z0hwf",
-        "outputId": "bdc4cf8e-9df5-45f3-b576-aa235e5b37d9",
+        "outputId": "b1492aa8-0680-48ec-ee09-fa3e23541ff5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 339
+          "height": 443
         }
       },
       "id": "nVpw8k1z0hwf",
-      "execution_count": 52,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Using device: cpu\n"
+            "Using device: cpu\n",
+            "Error loading /content/data1.log: could not convert string to float: 'Biometrics DataLog File V1'\n",
+            "Error loading /content/data2.log: could not convert string to float: 'Biometrics DataLog File V1'\n",
+            "Error loading /content/data3.log: could not convert string to float: 'Biometrics DataLog File V1'\n",
+            "Error loading /content/data4.log: could not convert string to float: 'Biometrics DataLog File V1'\n",
+            "Error loading /content/data5.log: could not convert string to float: 'Biometrics DataLog File V1'\n",
+            "Error loading /content/data6.log: could not convert string to float: 'Biometrics DataLog File V1'\n"
           ]
         },
         {
           "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '/Users/sns3776/Downloads/.SEMG_DB1/SEMG_DB1/N_TXT'",
+          "ename": "ValueError",
+          "evalue": "No data could be loaded from the provided files",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-52-cbcc65fd1f29>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m     \u001b[0mtrained_cnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-52-cbcc65fd1f29>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Load the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoint_angles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_txt_files_from_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# Apply preprocessing to EMG data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-51-c2d0ffe0a1cf>\u001b[0m in \u001b[0;36mload_txt_files_from_dir\u001b[0;34m(directory)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_txt_files_from_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/Users/sns3776/Downloads/.SEMG_DB1/SEMG_DB1/N_TXT'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\"Load EMG data from all .txt log files in a directory\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     log_files = [os.path.join(directory, f) for f in os.listdir(directory) \n\u001b[0m\u001b[1;32m      4\u001b[0m                  if f.endswith('.log')]\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mload_txt_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_files\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/sns3776/Downloads/.SEMG_DB1/SEMG_DB1/N_TXT'"
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-27-97832e66562a>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m     \u001b[0mtrained_cnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-27-97832e66562a>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Load the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoint_angles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_txt_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_of_files\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# Apply preprocessing to EMG data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-26-f219e802215c>\u001b[0m in \u001b[0;36mload_txt_files\u001b[0;34m(file_paths)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0memg_data_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No data could be loaded from the provided files\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m# Concatenate data from all files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: No data could be loaded from the provided files"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "print(os.path.exists(\"/content/data5.log\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s8CaTiMOI3IG",
+        "outputId": "f8c2e0f7-23e7-4d82-c5ca-e33c01c517d7"
+      },
+      "id": "s8CaTiMOI3IG",
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
           ]
         }
       ]
